tdf#99244 opengl: miter limit for poly lines

Change-Id: I1c363a8f1d21bbacab0c5785544aa8becfe39363